Bug fix: overflow-x on pc nav

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -164,7 +164,6 @@
 
 		position: absolute;
 		z-index: 99;
-		//top: -100%;
 		left: 0;
 		width: 100%;
 		min-height: 100vh;
@@ -183,12 +182,8 @@
 			margin-right: 0;
 			margin-top: 20px;
 		}
-		@media (max-width: px) {
-			
-		}
 
 		&.active {
-			//top: 0;
 			transform: translate(0,0);
 		}
 	}
@@ -303,7 +298,7 @@
 	}
 
 	height: 100%;
-	width: 100vw;
+	width: 100%;
 	overflow-x: hidden;
 	background-color: rgba(0, 0, 0, 0.7);
 
