--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,8 +12,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	max-width: 100vw;
-	overflow-x: hidden;
+	max-width: 100%;
+	overflow: hidden;
 }
 .container {
 	max-width: 1793px;
